# rackspace-keystoneauth-plugin

./: .gitignore  .testr.conf  AUTHORS  ChangeLog  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
rackspaceauth/: v2.py
rackspaceauth/loading/: v2.py
rackspaceauth/tests/unit/: test_rackspaceauth.py
