[metadata]
name = rackspaceauth
summary = keystoneauth plugin for Rackspace's authentication service
description-file =
    README.rst
author = Rackspace
author-email = sdk-support@rackspace.com
home-page = https://developer.rackspace.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    rackspaceauth

[wheel]
universal = 1
