[metadata]
name = rackspaceauth
summary = keystoneauth plugin for Rackspace's authentication service
description-file =
    README.rst
author = Brian Curtin
author-email = brian.curtin@rackspace.com
home-page = https://developer.rackspace.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    rackspaceauth

[entry_points]
keystoneauth1.plugin =
    rackspace_apikey   = rackspaceauth.loading.v2:APIKey
    rackspace_password = rackspaceauth.loading.v2:Password
    rackspace_token    = rackspaceauth.loading.v2:Token
    rackspace_sso    = rackspaceauth.loading.v2:SSO

[wheel]
universal = 1
